--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p id="buttons">
       <button type="button" id="choice" name="yes" class="pos" onclick="document.body.style.backgroundImage='url(welldone.jpg)';"><font>ДА, Я ПОЙДУ</font></button>
       <br>
-      <button type="button" id="choice" name="no" class="neg shake">НЕТ, ПОШЁЛ НА ХУЙ</button>
+      <button type="button" id="choice" name="no" class="neg triggered">НЕТ, ПОШЁЛ НА ХУЙ</button>
     </p>
   </body>
   <link rel="stylesheet" type="text/css" href="style.css" />
